Cleanup/improve MWModOnHDDialog

This commit is a clean up of Kate modified dialog to make it less crashy
and easier to understand.

- rename twDocuments to docsTreeWidget
- Store doc as a QPointer inside QTreeWidgetItem
- Check the doc for nullness everywhere
- Check the docInfo for nullness everywhere (it can be null)

BUG: 464088